sort.basic.lessons.sort.basic.shell.AlgShellSort.scala.error
AlgShellSort:10: error: not found: value h
       while(j >= h && getValue(j - gap) > v){
                  ^AlgShellSort:11: error: missing arguments for method getValue in class SortingEntity;
follow this method with `_' if you want to treat it as a partially applied function
         getValue(j) = getValue(j - gap)
         ^AlgShellSort:14: error: missing arguments for method getValue in class SortingEntity;
follow this method with `_' if you want to treat it as a partially applied function
       getValue(j) = v
       ^